# TypeTrain

./: ButtonDelegate.qml  CMakeLists.txt  EnglishPage.qml  LangChoosePage.qml  LeftShiftDelegate.qml  Main.qml  README.md  RightShiftDelegate.qml  RussianPage.qml  TypingPage.qml  WaveEffect.qml  WaveEffectRed.qml  main.cpp  resources.qrc  txtreader.cpp  txtreader.h
Texts/: a.txt  d.txt  e.txt  q.txt  t.txt  v.txt  x.txt  z.txt  в.txt  е.txt  й.txt  м.txt  у.txt  ф.txt  ч.txt  я.txt
